# pcb_renderer

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.test.debian  Dockerfile.test.linux  Dockerfile.test.windows  README.md  README.plugins  docker-compose.test.yml  main.py  pcb_renderer.code-workspace  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: implement-task.prompt.md
.github/workflows/: ci.yml  codeql.yml  docker-smoke-tests.yml
docker/: Dockerfile.test.linux  docker-compose.test.yml
docs/: ARCHITECTURE.md  DOCKER_TESTS.md  readme.tasks.md
docs/input/: Quilter Backend Engineer Code Challenge 1-27.md
docs/p0lan/: PR-4-TODO-PLAN.md
docs/plan/: 2026-02-02-pcb-renderer-implementation-plan.md  Application Implementation Specification_ PCB Renderer.md  acceptance_criteria_summary.md  development_plan_v2.md  implementation_guide_v2.md  prompt.txt  tasks.md
llm_plugin/: .env.example  README.md  __init__.py  __main__.py  cli.py  client.py  context.py  prompts.py
pcb_renderer/: __init__.py  __main__.py  cli.py  colors.py  errors.py  geometry.py  models.py  parse.py  render.py  stats.py  transform.py  validate.py
scripts/: validate_schema.py
tests/: conftest.py  test_boards.py  test_circle_keepouts.py  test_cli_invalid_boards.py  test_cli_open.py  test_coverage_boost.py  test_coverage_extras.py  test_export_json.py  test_geometry_extended.py  test_golden_render.py  test_llm_client.py  test_llm_plugin.py  test_models.py  test_parse.py  test_render.py  test_transform.py  test_validate.py
(+9 files in other folders)
