[project]
name = "pcb_renderer"
version = "0.1.0"
description = "PCB board renderer for ECAD JSON files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "typer>=0.9",
    "basedpyright>=1.37.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
llm = [
    "openai>=1.0.0",
    "typer>=0.9",
    "pydantic>=2.0",
]

[project.scripts]
pcb-render = "pcb_renderer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["pcb_renderer", "llm_plugin"]

[tool.pytest.ini_options]
addopts = "-q --cov --cov-report=term-missing"
testpaths = ["tests"]
